# Attendance

./: .firebaserc  .gitignore  Attendance_Program_Modification_Plan.docx  README.md  SETUP.md  analysis_options.yaml  firebase.json  firestore.rules  pubspec.yaml  pyzk_probe.py
.claude/: settings.local.json
bridge/: .env.example  .gitignore  apon-bridge.spec  pyproject.toml  run.py
bridge/bridge/: command_executor.py  command_listener.py  config.py  device.py  firestore_writer.py  heartbeat.py  main.py  remote_config.py  state.py
bridge/install/: diagnose.ps1  install.ps1  uninstall.ps1
deploy/: build_app.ps1  build_bridge.ps1
lib/: app.dart  config.dart  firebase_options.dart  main.dart
lib/models/: app_user.dart  approval_decision.dart  approval_policy.dart  daily_summary.dart  device.dart  employee.dart  employee_child_records.dart  employee_document.dart  employee_group.dart  employee_profile.dart  employee_salary.dart  holiday.dart  leave_type.dart  office_location.dart  payslip.dart  permission.dart  punch.dart  report_def.dart  request.dart  role.dart  salary_history_entry.dart  schedule.dart  session.dart  shift.dart  team.dart  tracking_method.dart
lib/providers/: app_state.dart
lib/screens/: app_user_editor_drawer.dart  approval_policy_editor_drawer.dart  attendance_screen.dart  auth_gate.dart  daily_screen.dart  dashboard_screen.dart  device_editor_drawer.dart  employee_detail_screen.dart  employee_group_editor_drawer.dart  employee_salary_editor_drawer.dart  employees_screen.dart  export_screen.dart  home_screen.dart  (+21 more)
windows/: CMakeLists.txt
(+35 files in other folders)
